<resources>

    <!-- GENERAL -->
    <string name="app_name">Marketing Cloud Learning App</string>
    <string name="app_label">Marketing Cloud</string>
    <string name="action_settings">Settings</string>
    <string name="action_cloudpage_inbox">CloudPage Inbox</string>
    <string name="action_map">Map</string>
    <string name="action_original_docs">Original SDK docs</string>
    <string name="logo">Logo</string>
    <string name="readme_remote_url">http://salesforce-marketingcloud.github.io/LearningAppAndroid/</string>
    <string name="official_remote_url">http://salesforce-marketingcloud.github.io/JB4A-SDK-Android/</string>

    <!-- SETTINGS -->
    <string name="pref_personal_info_title">Attributes</string>
    <string name="pref_tag_category_title">Tags</string>

    <string name="pref_subscriber_key">Subscriber Key</string>
    <string name="pref_subscriber_key_summ">Please enter a subscriber key (usually email address)</string>
    <string name="pref_subscriber_key_about">About Subscriber Key</string>

    <string name="pref_new_tag">New Tag</string>
    <string name="pref_new_tag_summ">Tap here to add a new Tag</string>
    <string name="pref_new_tag_dialog">Enter the new Tag</string>
    <string name="pref_tag_about">some stuff about tags</string>

    <!-- HELP -->
    <string name="attribute_help">Attributes contain specific information about your subscribers, such as first and last name, gender, and geographical location.\n\nYou can assign specific information as part of a subscriber attribute to be used as part of sends or subscriber management.\n\nThis JB4A SDK Explorer stores first name and last name as attributes.</string>
    <string name="subscriber_key_help">Your subscriber key provides a key for the Contact Record and can be used to tie together multiple channels/devices for each Contact.</string>
    <string name="tag_help">Tags are used to specify which messages a customer wishes to receive.  For example to receive messages for an interest in a particular activity.</string>


    <!-- DEBUG SETTINGS -->
    <string name="debug_pref_settings_title">Debug Settings</string>

    <string name="debug_pref_enable_debug">Enable Debug</string>
    <string name="debug_pref_enable_debug_summ_off">Debug logging is off.</string>
    <string name="debug_pref_enable_debug_summ_on">Debug logging is on.</string>

    <string name="debug_pref_collect_logcat">Email Log Data</string>
    <string name="debug_pref_collect_logcat_summ">Click to email log data.</string>

    <!-- Errors -->
    <string name="error_cannot_be_blank">This field cannot be blank</string>

    <!-- Cloud Inbox -->
    <string name="option_all">All</string>
    <string name="option_read">Read</string>
    <string name="option_unread">Unread</string>

    <!-- Map -->
    <string name="default_latitude">37.7842955</string>
    <string name="default_longitude">-122.4301521</string>
    <string name="error_could_not_update">Subscriber Key is Invalid</string>
    <string name="pref_attribute_category_title">Attributes</string>
    <string name="pref_attributes_about">some stuff about attributes</string>
    <string name="pref_attribute_firstname">Firstname</string>
    <string name="pref_attribute_lastname">Lastname</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_info">Information</string>
    <string name="in_btn_add_reminder">Add Reminder</string>
    <string name="pref_title_about_attributes">About Attributes</string>
    <string name="pref_title_about_subscriberkey">About Subscriber Key</string>
    <string name="pref_title_about_tags">About Tags</string>
    <string name="pref_attribute_lastname_summ">Please enter your Last Name</string>
    <string name="pref_attribute_firstname_summ">Please enter your First Name</string>

</resources>
