<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_personal_info_settings"
        android:title="@string/pref_subscriber_key">

        <!-- Subscriber key -->
        <Preference
            android:key="prefSubscriberKeyHelp"
            android:selectable="false"
            android:summary="@string/subscriber_key_help"
            android:title="About Subscriber Key" />

        <EditTextPreference
        android:defaultValue=""
        android:dialogMessage="@string/pref_subscriber_key_summ"
        android:inputType="textEmailAddress"
        android:key="pref_subscriber_key"
        android:singleLine="true"
        android:summary="@string/pref_subscriber_key_summ"
        android:title="@string/pref_subscriber_key" />

        <!-- End Subscriber key -->
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_attributes_section"
        android:title="@string/pref_attribute_category_title">

        <Preference
            android:key="prefSubscriberKeyHelp"
            android:selectable="false"
            android:summary="@string/pref_attributes_about"
            android:title="About Subscriber Key" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_tag_section"
        android:title="@string/pref_tag_category_title">

        <Preference
            android:key="prefSubscriberKeyHelp"
            android:selectable="false"
            android:summary="@string/pref_tag_about"
            android:title="About Subscriber Key" />
    </PreferenceCategory>


</PreferenceScreen>